[gd_scene load_steps=14 format=3 uid="uid://bmeu05liv0im3"]

[ext_resource type="Script" uid="uid://bkuhfif8r1q52" path="res://10c_directional_growth.gd" id="1_gl4an"]
[ext_resource type="Shader" uid="uid://d2iq10xfl0127" path="res://10c_directional_growth_display.gdshader" id="2_hpr2k"]
[ext_resource type="Shader" uid="uid://bl6bjn6vo3io2" path="res://10c_directional_growth.gdshader" id="2_s2y02"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_36v17"]
shader = ExtResource("2_hpr2k")

[sub_resource type="ViewportTexture" id="ViewportTexture_hpr2k"]
viewport_path = NodePath("BufferSubViewport")

[sub_resource type="Gradient" id="Gradient_s2y02"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hpr2k"]
noise_type = 0
seed = 3
frequency = 1.0
fractal_octaves = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tjnlu"]
width = 256
height = 256
color_ramp = SubResource("Gradient_s2y02")
noise = SubResource("FastNoiseLite_hpr2k")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tjnlu"]
shader = ExtResource("2_s2y02")
shader_parameter/size = Vector2(128, 128)
shader_parameter/seed = 0
shader_parameter/halfWidth = 1.0
shader_parameter/branchingProb = 0.1
shader_parameter/branchingProbNoise = SubResource("NoiseTexture2D_tjnlu")
shader_parameter/iFrame = 0

[sub_resource type="Gradient" id="Gradient_36v17"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qeglr"]
gradient = SubResource("Gradient_36v17")
width = 128
height = 128

[sub_resource type="ViewportTexture" id="ViewportTexture_t70h3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_gl4an"]
viewport_path = NodePath("SubViewport")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gl4an")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 128.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="Display" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_36v17")
position = Vector2(64, 64)
texture = SubResource("ViewportTexture_hpr2k")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
use_hdr_2d = true
size = Vector2i(128, 128)
render_target_clear_mode = 1
render_target_update_mode = 0

[node name="Simulation" type="Sprite2D" parent="SubViewport"]
texture_filter = 1
material = SubResource("ShaderMaterial_tjnlu")
position = Vector2(64, 64)
texture = SubResource("GradientTexture2D_qeglr")

[node name="BufferSubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
use_hdr_2d = true
size = Vector2i(128, 128)
render_target_clear_mode = 1
render_target_update_mode = 0

[node name="BufferSprite2D" type="Sprite2D" parent="BufferSubViewport"]
texture_filter = 1
position = Vector2(64, 64)
texture = SubResource("ViewportTexture_t70h3")

[node name="DebugSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("ViewportTexture_gl4an")
